Done with site in accordance to kmom01 specification

--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -3,4 +3,13 @@
 Redovisning kmom01
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/01_kmom01.md`.
+Jag är osäker på om jag har använt ramverk, eftersom jag fortfarande inte är helt hundra på den exakta innebörden. Så jag har ingen stor, om någon alls, vana att arbeta i ramverk. Jag gick en kurs via Udemy där stylingen med CSS var en stor del. Jag använde Node.js för att “pipea” min CSS med olika verktyg och kunde då använda objekt och mixins. Jag är nästan säker på att det var LESS man använde då, men om detta räcker för att kalla ett ramverk vet jag inte. Tyvärr var kursen utformad på så vis att man stylade tillsammans med läraren för att passa ett förutbestämt utseende. I och med att man inte testade sig fram själv sitter inte så mycket kvar, något jag märkte under detta kursmoment.
+
+Förutom LESS som jag nämnde ovan är allt förutom det vi använt i PHP kursen som HTML, CSS, webbserver etc nytt för mig. Detta är första gången jag använder Markdown. Min spontana känsla av Markdown är att tekniken kan vara ett bra stöd för personer som inte är programmerare men ändå behöver redigera en webbsidas innehåll, då det är lättläst och kräver inga förkunskaper. Samtidigt är jag osäker på om det tar mindre tid att lära sig Markdown än HTML.
+
+Jag har tidigare använt lite Responsive Design vilket jag tycker är ett bra koncept. Att inte tynga ner mobilanvändare med för stora filer är extremt bra och finns ju i andra koncept som Mobile-First. Det som exempelvis Mobile-First missar är att sidor skapade för en telefon inte utnyttjar all möjlighet som finns för kraftfullare maskiner. På samma sätt som det inte är en bra idé att tvinga en användare som besöker en webbsida via en telefon att ladda ner stora bildfiler som ändå blir justeras, är det dumt att inte utnyttja den fulla potentialen av en användare som sitter på en kraftfull HD-skärm med fiberuppkoppling. Detta tänker man på med Responsive Design. Rätt sida för rätt enhet helt enkelt.
+
+Jag har även läst en del om "inclusive webdesign" (konceptet har även andra namn). Konceptet går ut på att designa webbsidor så att alla kan använda dem, det vill säga webbsidorna anpassas för personer med olika typer av funktionsvariationer. Som responsiv design men istället för att matcha sidan till enheten matchar man sidan till olika typer av behov som exempelvis synskador. En Webb för alla helt enkelt. Dessa två koncept hoppas jag kunna applicera i senare kursmoment.
+
+Stylandet gick bra, till viss del mycket bra, och jag kom åt och kunde justera det jag önskade. Bitvis var det svårt att få sidan att se ut som jag ville, exempelvis fick jag inte navbaren att visa länkarna vertikalt. Jag svär även fortfarande över footern som inte blev som jag ville. Jag är säker på att det ligger kvar lite CSS i min fil som inte har någon funktion. Jag hoppas kunna ordna detta med mer kunskap i senare kursmoment.
+Att ha koll på hemsidans struktur och uppbyggnad är a och o för att styla hemsidan. Det var här mina största problem låg.
