Implemented vertical and horizontal grid, redesigned website

--- a/content/redovisning/03_kmom03.md
+++ b/content/redovisning/03_kmom03.md
@@ -3,4 +3,23 @@
 Redovisning kmom03
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/03_kmom03.md`.
+###Hur känns det att vara styrd till ett vertikalt grid, hämmande eller stödjande?
+Personligen tycker jag att introduktionen av det vertikala gridet underlättade design och stylingen enormt. Att placera olika delar av sidan i relation till varandra har varit den största utmaningen i tidigare kursmoment. Att ha gridet gjorde att placeringen är enklare att visualisera och testa. Utöver det har jag med gridders hjälp kunnat göra en mycket mer stilren layout där sidans kolumner nu har en mer naturlig placering. Ett kanon verktyg helt enkelt.
+
+###Hur känns det att jobba med ett typografiskt horisontellt/baseline grid, ser du någon poäng med det?
+Att använda det horisontella gridet har precis som det vertikala underlättat visualiseringen av sidan. Griddet är ett bra stöd för typografin. Under kursmomentet användes det mindre än vad jag initialt trott att det skulle göras. Som med mycket i denna kurs får man en bra introduktion av verktyget, det ska bli intressant att se vad man mer kan använda det horisontella gridet till.
+
+###Berätta om hur du valde typsnitt till din webbplats.
+Jag gick in på google fonts och tittade runt. Jag visste att jag ville använda ett serif typsnitt till sidan. Tillsammans med min sambo testade jag lite olika fonter och fastnade för Roboto Slab, som jag använde för mina headers, det breda typsnittet passade bra. Nästa steg var att hitta ett liknande men smalare typsnitt som jag ville använda till paragraferna, jag landade vid Slabo och har använt mig av det. Jag importerade länkarna till min sida och körde på.
+
+###Har du jobbat med liknande gridbaserad layout tekniker sedan tidigare?
+Jag har tidigare använt flexbox för att styla mina sidor, men aldrig tidigare använt mig av vertikala eller horisontella grid. Som jag skrev ovan tycker jag att de är väldigt bra verktyg för sidlayout.
+
+###Hur känns det att jobba med LESS och moduler? Lyckas du återanvända moduler mellan teman för kmom02 och kmom03?
+Less känns väldigt bra, det var enklare under detta kursmoment att navigera runt i strukturen. Jag valde att skapa nya moduler när jag integrerade gridden i designen. Små stycken av tidigare kod återfinns i de nya filerna men det blev mycket ändring. Min sida är förhållandevis lik tidigare design. Men det var under detta kursmoment som jag känner att sidans stil landade. Där finns naturligtvis mycket att förbättra, men designen på sidan känns bra just nu. Designen är sparsam men jag tycker den håller ihop innehållet.
+
+###Hur gick det med din responsivitet för webbplatsen?
+Responsiviteten gick bra att implementera på sida.  Videorna var ett bra stöd och det var enkelt att åstadkomma ytterligare responsivitet som jag önskade.
+
+###Vilken är din TIL för detta kmom?
+Att använda sig av ett grid underlättar att sätta kompositionen av designen. Som jag nämnde tidigare har placering av olika element varit det jag ansett varit absolut svårast. Detta för att det varit svårt att veta vart jag ska börja. Med ett grid är det enkelt att placera ut de olika delarna av sidan och testa olika former av komposition.  
