Added dark, minimalistic and colorful themes. Also added repports

--- a/content/redovisning/04_kmom04.md
+++ b/content/redovisning/04_kmom04.md
@@ -3,4 +3,35 @@
 Redovisning kmom04
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/04_kmom04.md`.
+###Kommentera kort om skrivuppgiften, någon som är värt att nämna från arbetet med den?
+Arbetet var lite krångligt då det var svårt att veta exakt vad man letade efter. Men när jag följde kraven så tror jag att allt föll på plats.
+
+###Berätta kort om din tanke bakom respektive teman, hur tolkade du “minimalistisk”, “colorful” och “dark”.
+Minimalistisk tänkte jag lite eller inga färger och en enkel sida. Jag ville hålla det så enkelt som möjligt och välja enkel typografi och någon som alla som använt word känner igen.
+
+Colorful, här tänkte jag lekfullt och barnsligt, jag ville ha roliga färger och intrycksfulla fonter. Men jag ville inte för den sakens skull få en för skrikig hemsida, därför tänkte jag på pastellfärger.
+
+I dark-temat vill jag ha en mörk bakrund så klart men jag ville även få till en bra kontrast mot textfärgen utan att köra terminal grönt eller vitt.
+
+###Vilket färgschema valde du till respektive tema och hur valde du att använda färgerna (mer eller mindre eller lika mycket av alla färger)?
+För det [minimalistiska temat](http://www.student.bth.se/~daje19/dbwebb-kurser/design/me/redovisa/htdocs/redovisning/kmom04?style=04_minimalistic "Minimalistiskt tema") valde jag olika nyanser av grått på vit bakgrund. Jag experimenterade med en accentfärg här. Men jag kände att även en liten splash av färg gick ifrån min bild av minimalistiskt. Jag hade säkert i någon mindre detalj kunnat få in en accentfärg.
+
+För [colorful temat](http://www.student.bth.se/~daje19/dbwebb-kurser/design/me/redovisa/htdocs/redovisning/kmom04?style=04_colorful "Colorful tema") så utgick jag från en blå pastellfärg och använde Adobes färghjul och triad för att få fram de andra färgerna. Huvudsakligen pastellblått och pastell rosa. För att få texten läsbar pillade jag lite med shade på en av färgerna. Jag slängde även in en gul pastellfärg från triaden på min byline som accentfärg.
+
+I mitt [dark tema](http://www.student.bth.se/~daje19/dbwebb-kurser/design/me/redovisa/htdocs/redovisning/kmom04?style=04_dark "Dark tema") så utgick jag från en mörk blå/svart färg. Jag använder en skarp orange till texten för att den ska synas tydligt och att det ger ett roligare intryck än en vit eller grön färg som är vanlig i mörka sidor. 
+
+###Valde du att jobba med accentfärg och isåfall hur?
+Jag jobbade med en gul accentfärg i colorful-temat, som jag nämnde ovan. Om man nu kan kalla det en accentfärg när den fanns i färghjulet. Men gult mot en huvudsakligt blå sida skulle jag nog ändå kalla en accentfärg.
+
+###Hur tänkte du kring valet av typografi?
+Jag hittade unika typografi val till samtliga sidor. För Minimalistic googlade jag och hittade en lista med olika minimalistiska font par och valde därifrån Work Sans till headers och Open Sans till brödtext. Ett "tråkigt" val, men vedertaget och tydligt.
+
+För Colorful sökte jag istället på lekfulla font par och landade i Bebas Neue och Open Sans jag tyckte detta var ett enkelt sätt att dels få inspiration men också för att se vad som fanns, då jag inte är så bevandrad i alla dessa fonter som finns där ute.
+
+Till mitt dark theme hittade jag en snubblade jag över en font som, heter Source Code Pro och använde denna för all text i denna sida. Den gav ett gritty och coolt intryck som passade med de färger jag tänkte mig till temat.
+
+###Berätta om din kodstruktur av teman, jobbade du med bastema och hur löste du anpassningarna till de olika temana?
+Jag utgick från ett bastema för samtliga teman, det första jag fick göra var att strukturera upp stylingen då jag sedan tidigare kursmoment hade stylingar och färgval i olika filer. Efter att jag samlat detta i bastemat så skapade jag en fil som skrev över färger och typografins variabler och importerade dessa filer till rätt tema.
+
+###Vilken är din TIL för detta kmom?
+Jag tar med mig vikten av att från början strukturera upp din kod i moduler. Som jag nämnde tidigare fick jag spendera en del tid med att ändra hårdkodad styling till variablerna så att jag kunde ändra dessa för de olika teman. Huvudsakligen var det v-grid modulen där jag kodat in styling direkt.
